# dara

./: CITATION.cff  README.md  pyproject.toml
docs/: conf.py  install.md
notebooks/: phase_search.ipynb
src/dara/: eflech_worker.py  refine.py  structure_db.py  utils.py  xrd.py
src/dara/bgmn/: download_bgmn.py
src/dara/data/: common_gases.json
src/dara/data/BGMN-Templates/Devices/: bruker_als_instrument_mine.geq  bruker_als_instrument_mine.ger  bruker_als_instrument_mine.sav  bruker_van_als_instrument.SAV  bruker_van_als_instrument.geq  bruker_van_als_instrument.ger  made_up.SAV  made_up.get  made_up.tpl  van_lab_instrument.geq  van_lab_instrument.ger  van_lab_instrument.sav  van_lab_instrument.tpl
src/dara/prediction/: rn.py
src/dara/search/: __init__.py  core.py  data_model.py  peak_matcher copy.py  peak_matcher.py  tree.py
src/dara/server/: api_router.py
src/dara/server/ui/public/: 404.html  chunk-map.json  commons-7f1d9e9fa22e95474fd2.js  commons-7f1d9e9fa22e95474fd2.js.map  component---src-pages-task-js-d3746f08976ea061c4c3.js  component---src-pages-task-js-d3746f08976ea061c4c3.js.map  index.html  webpack-runtime-b4f6a96d38ba1275c505.js  webpack-runtime-b4f6a96d38ba1275c505.js.map  webpack-runtime-c7aaf4a392e4839a307a.js  webpack-runtime-c7aaf4a392e4839a307a.js.map  webpack.stats.json
src/dara/server/ui/public/404/: index.html
src/dara/server/ui/public/page-data/: app-data.json
src/dara/server/ui/public/page-data/tutorial/: page-data.json
src/dara/server/ui/public/results/: index.html
src/dara/server/ui/public/task/: index.html
src/dara/server/ui/public/tutorial/: index.html
src/dara/server/ui/src/components/: HeaderMenu.js
src/dara/server/ui/src/pages/: task.js
